Refactor styles and add YouTube page with responsive design

--- a/index.html
+++ b/index.html
@@ -12,16 +12,18 @@
   </head>
   <body>
     <main>
-      <nav class="navbar">
-        <div class="logo">Gamelynx</div>
-        <div class="nav-links">
-          <a href="/index.html">Home</a>
-          <a href="/pages/blog/mainblog.html">Blog</a>
-          <a href="/pages/youtube.html">YouTube</a>
-          <a href="/pages/download/main-downlod.html">Download</a>
-          <a href="/pages/contact.html">Contact</a>
-        </div>
-      </nav>
+      <header>
+        <nav class="navbar">
+          <div class="logo">Gamelynx</div>
+          <div class="nav-links">
+            <a href="/index.html">Home</a>
+            <a href="/pages/blog/mainblog.html">Blog</a>
+            <a href="/pages/youtube.html">YouTube</a>
+            <a href="/pages/download/main-downlod.html">Download</a>
+            <a href="/pages/contact.html">Contact</a>
+          </div>
+        </nav>
+      </header>
 
       <section class="hero" id="home">
         <div class="hero-content">
