Add article section with responsive design and hover effects; update contact button styles

--- a/index.html
+++ b/index.html
@@ -44,7 +44,66 @@
         </div>
       </section>
 
-      <section class="featured-games" id="games">
+      <section class="featured-article" id="articles">
+        <h2 class="section-title">Read Articles</h2>
+        <div class="article-grid">
+          <div class="articles-card">
+            <img
+              src="/assets/images/fortnite-pictures.jpg"
+              alt="Fortnite"
+              class="articles-image"
+            />
+            <div class="articles-info">
+              <h3 class="articles-title">Fortnite</h3>
+              <p>
+                Fortnite is the super-popular, mainstream face of the battle
+                royale genre, but that doesn't mean that the title is without
+                merit.
+              </p>
+            </div>
+          </div>
+
+          <div class="articles-card">
+            <img
+              src="/assets/images/GeForce RTX 5090.jpg"
+              alt="GeForce RTX 5090"
+              class="articles-image"
+            />
+            <div class="articles-info">
+              <h3 class="articles-title">GeForce RTX 5090 GPU</h3>
+              <p>
+                The GeForce RTX 5090 is a high-end graphics card from NVIDIA,
+                featuring the Blackwell architecture and 32 GB of GDDR7 memory,
+                designed for advanced gaming and creative workloads.
+              </p>
+            </div>
+          </div>
+
+          <div class="articles-card">
+            <img
+              src="/assets/images/Satisfactory.png"
+              alt="Satisfactory"
+              class="articles-image"
+            />
+            <div class="articles-info">
+              <h3 class="articles-title">Satisfactory</h3>
+              <p>
+                The player is dropped onto an alien planet with a handful of
+                tools and must exploit the planet's natural resources to
+                construct increasingly complex factories.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="read-more-article">
+          <a href="/pages/blog/mainblog.html" target="_blank">
+            <button class="read-more-article-btn">Read More Articles</button>
+          </a>
+        </div>
+      </section>
+
+      <section class="featured-games" id="games-download">
         <h2 class="section-title">Download Games</h2>
         <div class="games-grid">
           <div class="game-card">
@@ -86,6 +145,12 @@
               <p>Open-world action shooter set in a tropical revolution.</p>
             </div>
           </div>
+        </div>
+
+        <div class="read-more-article">
+          <a href="/pages/download/main-downlod.html" target="_blank">
+            <button class="read-more-article-btn">Go To Download</button>
+          </a>
         </div>
       </section>
 
