Remove target="_blank" from article and download links for improved navigation

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </div>
 
         <div class="read-more-article">
-          <a href="/pages/blog/mainblog.html" target="_blank">
+          <a href="/pages/blog/mainblog.html">
             <button class="read-more-article-btn">Read More Articles</button>
           </a>
         </div>
@@ -148,7 +148,7 @@
         </div>
 
         <div class="read-more-article">
-          <a href="/pages/download/main-downlod.html" target="_blank">
+          <a href="/pages/download/main-downlod.html">
             <button class="read-more-article-btn">Go To Download</button>
           </a>
         </div>
