Replace hero image with a video background for enhanced visual impact; add responsive styling for video element

--- a/index.html
+++ b/index.html
@@ -27,11 +27,15 @@
 
       <section class="hero" id="home">
         <div class="hero-content">
-          <img
-            class="overlay-image"
-            src="/assets/images/index1.jpg"
-            alt="Hero Image"
-          />
+          <div class="home-video">
+            <video
+              src="/assets/video/home video.mp4"
+              class="home-video"
+              autoplay
+              loop
+              muted
+            ></video>
+          </div>
           <div class="image-text">
             <h1>Welcome to the Future of Gaming</h1>
             <p>
