Rename video class for consistency and clarity in styling

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <div class="home-video">
             <video
               src="/assets/video/home video.mp4"
-              class="home-video"
+              class="video"
               autoplay
               loop
               muted
