Correct capitalization in the welcome heading on the home page

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             ></video>
           </div>
           <div class="image-text">
-            <h1>Welcome to the Future of Gaming</h1>
+            <h1>Welcome To The Future Of Gaming</h1>
             <p>
               Experience next-level gaming with our premium collection of games
             </p>
