--- a/pages/youtube.html
+++ b/pages/youtube.html
@@ -21,6 +21,11 @@
       <header>
         <nav class="navbar">
           <div class="logo">Gamelynx</div>
+          <div class="burger">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+          </div>
           <div class="nav-links">
             <a href="/index.html">Home</a>
             <a href="/pages/blog/mainblog.html">Blog</a>
@@ -134,5 +139,14 @@
         <p>&copy; 2025 Gamelynx. All rights reserved.</p>
       </footer>
     </main>
+    <script>
+      const burger = document.querySelector(".burger");
+      const navLinks = document.querySelector(".nav-links");
+
+      burger.addEventListener("click", () => {
+        navLinks.classList.toggle("nav-active");
+        burger.classList.toggle("toggle");
+      });
+    </script>
   </body>
 </html>
