Add nav-bar-logo class for consistent styling across pages

--- a/pages/download/main-downlod.html
+++ b/pages/download/main-downlod.html
@@ -18,7 +18,9 @@
       <section id="hero">
         <header>
           <nav class="navbar">
-            <div class="logo">Gamelynx</div>
+            <div class="logo">
+              <a class="nav-bar-logo" href="/index.html">Gamelynx</a>
+            </div>
             <div class="burger" onclick="toggleMenu()">
               <div></div>
               <div></div>
