--- a/pages/youtube.html
+++ b/pages/youtube.html
@@ -20,7 +20,9 @@
     <main>
       <header>
         <nav class="navbar">
-          <div class="logo">Gamelynx</div>
+          <div class="logo">
+            <a class="nav-bar-logo" href="/index.html">Gamelynx</a>
+          </div>
           <div class="burger">
             <div class="line1"></div>
             <div class="line2"></div>
