--- a/pages/contact.html
+++ b/pages/contact.html
@@ -14,7 +14,9 @@
       <header>
         <div class="container header-container">
           <nav class="navbar">
-            <div class="logo">Gamelynx</div>
+            <div class="logo">
+              <a class="nav-bar-logo" href="/index.html">Gamelynx</a>
+            </div>
             <div class="nav-links" id="nav-links">
               <a href="/index.html">Home</a>
               <a href="/pages/blog/mainblog.html">Blog</a>
