--- a/pages/download/download pages/far-cry-6-download.html
+++ b/pages/download/download pages/far-cry-6-download.html
@@ -13,7 +13,9 @@
     <main>
       <header>
         <nav class="navbar">
-          <div class="logo">Gamelynx</div>
+          <div class="logo">
+            <a class="nav-bar-logo" href="/index.html">Gamelynx</a>
+          </div>
           <div class="nav-links">
             <a href="/index.html">Home</a>
             <a href="/pages/blog/mainblog.html">Blog</a>
