--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                 autoplay
                 loop
                 muted
+                style="width: 100vw; height: 100vh"
               ></video>
             </div>
             <div class="image-text">
