Refactor layout and styles for improved responsiveness and accessibility across the home page

--- a/index.html
+++ b/index.html
@@ -11,176 +11,173 @@
     <link rel="stylesheet" href="/css/home-page.css" />
   </head>
   <body>
-    <div class="container">
-      <main>
-        <header>
-          <nav class="navbar">
-            <div class="logo">
-              <a class="nav-bar-logo" href="/index.html">Gamelynx</a>
-            </div>
-            <div class="nav-links" id="nav-links">
-              <a href="/index.html">Home</a>
-              <a href="/pages/blog/mainblog.html">Blog</a>
-              <a href="/pages/youtube.html">YouTube</a>
-              <a href="/pages/download/main-downlod.html">Download</a>
-              <a href="/pages/contact.html">Contact</a>
-            </div>
-            <div class="burger-menu" id="burger-menu">
-              <span></span>
-              <span></span>
-              <span></span>
-            </div>
-          </nav>
-        </header>
+    <header>
+      <nav class="navbar">
+        <div class="logo">
+          <a class="nav-bar-logo" href="/index.html">Gamelynx</a>
+        </div>
+        <div class="nav-links" id="nav-links">
+          <a href="/index.html">Home</a>
+          <a href="/pages/blog/mainblog.html">Blog</a>
+          <a href="/pages/youtube.html">YouTube</a>
+          <a href="/pages/download/main-downlod.html">Download</a>
+          <a href="/pages/contact.html">Contact</a>
+        </div>
+        <div class="burger-menu" id="burger-menu">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </nav>
+    </header>
 
-        <section class="hero" id="home">
-          <div class="hero-content">
-            <div class="home-video">
-              <video
-                src="/assets/video/home video.mp4"
-                class="video"
-                autoplay
-                loop
-                muted
-                style="width: 100vw; height: 100vh"
-              ></video>
-            </div>
-            <div class="image-text">
-              <h1>Welcome To The Future Of Gaming</h1>
+    <main>
+      <section class="hero" id="home">
+        <div class="hero-content">
+          <div class="home-video">
+            <video
+              src="/assets/video/home video.mp4"
+              class="video"
+              autoplay
+              loop
+              muted
+              style="width: 100vw; height: 100vh"
+            ></video>
+          </div>
+          <div class="image-text">
+            <h1>Welcome To The Future Of Gaming</h1>
+            <p>
+              Experience next-level gaming with our premium collection of games
+            </p>
+            <a href="/pages/blog/mainblog.html" target="_blank">
+              <button class="cta-button">Explore Games</button>
+            </a>
+          </div>
+        </div>
+      </section>
+
+      <section class="featured-article" id="articles">
+        <h2 class="section-title">Read Articles</h2>
+        <div class="article-grid">
+          <div class="articles-card">
+            <img
+              src="/assets/images/fortnite-pictures.jpg"
+              alt="Fortnite"
+              class="articles-image"
+            />
+            <div class="articles-info">
+              <h3 class="articles-title">Fortnite</h3>
               <p>
-                Experience next-level gaming with our premium collection of
-                games
+                Fortnite is the super-popular, mainstream face of the battle
+                royale genre, but that doesn't mean that the title is without
+                merit.
               </p>
-              <a href="/pages/blog/mainblog.html" target="_blank">
-                <button class="cta-button">Explore Games</button>
-              </a>
-            </div>
-          </div>
-        </section>
-
-        <section class="featured-article" id="articles">
-          <h2 class="section-title">Read Articles</h2>
-          <div class="article-grid">
-            <div class="articles-card">
-              <img
-                src="/assets/images/fortnite-pictures.jpg"
-                alt="Fortnite"
-                class="articles-image"
-              />
-              <div class="articles-info">
-                <h3 class="articles-title">Fortnite</h3>
-                <p>
-                  Fortnite is the super-popular, mainstream face of the battle
-                  royale genre, but that doesn't mean that the title is without
-                  merit.
-                </p>
-              </div>
-            </div>
-
-            <div class="articles-card">
-              <img
-                src="/assets/images/GeForce RTX 5090.jpg"
-                alt="GeForce RTX 5090"
-                class="articles-image"
-              />
-              <div class="articles-info">
-                <h3 class="articles-title">GeForce RTX 5090 GPU</h3>
-                <p>
-                  The GeForce RTX 5090 is a high-end graphics card from NVIDIA,
-                  featuring the Blackwell architecture and 32 GB of GDDR7
-                  memory, designed for advanced gaming and creative workloads.
-                </p>
-              </div>
-            </div>
-
-            <div class="articles-card">
-              <img
-                src="/assets/images/Satisfactory.png"
-                alt="Satisfactory"
-                class="articles-image"
-              />
-              <div class="articles-info">
-                <h3 class="articles-title">Satisfactory</h3>
-                <p>
-                  The player is dropped onto an alien planet with a handful of
-                  tools and must exploit the planet's natural resources to
-                  construct increasingly complex factories.
-                </p>
-              </div>
             </div>
           </div>
 
-          <div class="read-more-article">
-            <a href="/pages/blog/mainblog.html">
-              <button class="read-more-article-btn">Read More Articles</button>
-            </a>
-          </div>
-        </section>
-
-        <section class="featured-games" id="games-download">
-          <h2 class="section-title">Download Games</h2>
-          <div class="games-grid">
-            <div class="game-card">
-              <img
-                src="/assets/images/download images/gta v/gta 5.jpg"
-                alt="Game 1"
-                class="game-image"
-              />
-              <div class="game-info">
-                <h3 class="game-title">GTA 5</h3>
-                <p>
-                  Open-world action-adventure game with crime, chaos, and
-                  endless possibilities.
-                </p>
-              </div>
-            </div>
-
-            <div class="game-card">
-              <img
-                src="/assets/images/download images/Assassin's Creed Mirage/AC Mirage card.jpg"
-                alt="Game 2"
-                class="game-image"
-              />
-              <div class="game-info">
-                <h3 class="game-title">Assassin's Creed Mirage</h3>
-                <p>
-                  Return to stealth roots in ancient Baghdad as assassin Basim.
-                </p>
-              </div>
-            </div>
-            <div class="game-card">
-              <img
-                src="/assets/images/download images/far cry 6/far cry 6 card.jpg"
-                alt="Game 3"
-                class="game-image"
-              />
-              <div class="game-info">
-                <h3 class="game-title">Far Cry 6</h3>
-                <p>Open-world action shooter set in a tropical revolution.</p>
-              </div>
+          <div class="articles-card">
+            <img
+              src="/assets/images/GeForce RTX 5090.jpg"
+              alt="GeForce RTX 5090"
+              class="articles-image"
+            />
+            <div class="articles-info">
+              <h3 class="articles-title">GeForce RTX 5090 GPU</h3>
+              <p>
+                The GeForce RTX 5090 is a high-end graphics card from NVIDIA,
+                featuring the Blackwell architecture and 32 GB of GDDR7 memory,
+                designed for advanced gaming and creative workloads.
+              </p>
             </div>
           </div>
 
-          <div class="read-more-article">
-            <a href="/pages/download/main-downlod.html">
-              <button class="read-more-article-btn">Go To Download</button>
-            </a>
+          <div class="articles-card">
+            <img
+              src="/assets/images/Satisfactory.png"
+              alt="Satisfactory"
+              class="articles-image"
+            />
+            <div class="articles-info">
+              <h3 class="articles-title">Satisfactory</h3>
+              <p>
+                The player is dropped onto an alien planet with a handful of
+                tools and must exploit the planet's natural resources to
+                construct increasingly complex factories.
+              </p>
+            </div>
           </div>
-        </section>
+        </div>
 
-        <footer>
-          <div class="social-links">
-            <a href="#">Facebook</a>
-            <a href="#">Twitter</a>
-            <a href="https://youtube.com/@storylinegaming2002" target="_blank"
-              >YouTube</a
-            >
-            <a href="#">Discord</a>
+        <div class="read-more-article">
+          <a href="/pages/blog/mainblog.html">
+            <button class="read-more-article-btn">Read More Articles</button>
+          </a>
+        </div>
+      </section>
+
+      <section class="featured-games" id="games-download">
+        <h2 class="section-title">Download Games</h2>
+        <div class="games-grid">
+          <div class="game-card">
+            <img
+              src="/assets/images/download images/gta v/gta 5.jpg"
+              alt="Game 1"
+              class="game-image"
+            />
+            <div class="game-info">
+              <h3 class="game-title">GTA 5</h3>
+              <p>
+                Open-world action-adventure game with crime, chaos, and endless
+                possibilities.
+              </p>
+            </div>
           </div>
-          <p>&copy; 2025 Gamelynx. All rights reserved.</p>
-        </footer>
-      </main>
-    </div>
+
+          <div class="game-card">
+            <img
+              src="/assets/images/download images/Assassin's Creed Mirage/AC Mirage card.jpg"
+              alt="Game 2"
+              class="game-image"
+            />
+            <div class="game-info">
+              <h3 class="game-title">Assassin's Creed Mirage</h3>
+              <p>
+                Return to stealth roots in ancient Baghdad as assassin Basim.
+              </p>
+            </div>
+          </div>
+          <div class="game-card">
+            <img
+              src="/assets/images/download images/far cry 6/far cry 6 card.jpg"
+              alt="Game 3"
+              class="game-image"
+            />
+            <div class="game-info">
+              <h3 class="game-title">Far Cry 6</h3>
+              <p>Open-world action shooter set in a tropical revolution.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="read-more-article">
+          <a href="/pages/download/main-downlod.html">
+            <button class="read-more-article-btn">Go To Download</button>
+          </a>
+        </div>
+      </section>
+
+      <footer>
+        <div class="social-links">
+          <a href="#">Facebook</a>
+          <a href="#">Twitter</a>
+          <a href="https://youtube.com/@storylinegaming2002" target="_blank"
+            >YouTube</a
+          >
+          <a href="#">Discord</a>
+        </div>
+        <p>&copy; 2025 Gamelynx. All rights reserved.</p>
+      </footer>
+    </main>
     <script>
       document
         .getElementById("burger-menu")
